# blind_transpiler

./: CITATION.cff  CNAME  LICENSE  NOTICE  README.md  pyproject.toml  requirements.txt
blind_transpiler/: __init__.py  global_value_store.py
blind_transpiler/controllers/: base.py  fdqc.py  orchestrator.py  qhe.py  ssdqc.py  ubqc.py
blind_transpiler/essentials/: bop.py  bqc_instruction.py
blind_transpiler/translators/: base.py  homomorphicTranslator.py  universalFixedRotationTranslator.py  universalOrderedSetTranslator.py  universalRecursiveRotationTranslator.py
blind_transpiler/translators/custom_gates/: custom_gates.py
docs/: .buildinfo  CNAME  blind_transpiler.controllers.html  blind_transpiler.essentials.html  blind_transpiler.html  genindex.html  index.html  py-modindex.html
docs/_modules/: index.html
docs/_modules/blind_transpiler/: global_value_store.html
docs/_sources/: blind_transpiler.essentials.rst.txt  blind_transpiler.rst.txt  index.rst.txt  quickstart.rst.txt
docs/_sources/translators/: homomorphicTranslator.rst.txt  universalOrderedSetTranslator.rst.txt
docs/controllers/: fdqc_controller.html
docs/translators/: homomorphicTranslator.html  universalFixedRotationTranslator.html  universalOrderedSetTranslator.html  universalRecursiveRotationTranslator.html
documentation/html/: architecture.html  blind_transpiler.translators.html  objects.inv  protocols.html  quickstart.html  search.html  searchindex.js
documentation/html/_sources/: architecture.rst.txt  blind_transpiler.controllers.rst.txt  blind_transpiler.translators.rst.txt  protocols.rst.txt
documentation/html/controllers/: qhe_controller.html  ssdqc_controller.html  ubqc_controller.html
examples/: blind_bv.py  blind_dj.py  blind_grover.py  blind_qft.py  blind_qpe.py  helper_functions.py  simplest.py
examples/applications/: __init__.py  bernstein_vazirani.py  deustch_jozsa.py  grover_circuit.py  quantum_fourier_tranform.py
tests/: README.md  test.py  test_cases.py  visualizer.py
tests/applications/: bernstein_vazirani.py  deustch_jozsa.py  quantum_phase_estimation.py
(+19 files in other folders)
